# platform-docs

./: .env.example  .gitignore  CLAUDE.md  README.md  fastmcp-fastembed.json  fastmcp.json  pyproject.toml  run_http_server.py
docs/: DEPLOYMENT_GUIDE.md  VECTOR_DB_REFRESH_GUIDE.md
docs/guides/: kestra-setup-walkthrough.md  prefect-setup-walkthrough.md
docs/plans/: 2026-07-22-kestra-spike.md
docs/research/: 2026-06-01-grok-docs-sources.md  2026-07-22-orchestration-comparison.md
docs/retrospectives/: 2026-07-22-kestra-spike-retrospective.md
docs/specs/: 2026-07-22-orchestration-evaluation-design.md
scripts/: download_llms_raw.py  embedding_config.py  split_llms_pages.py  upload_to_qdrant.py  upload_to_qdrant_fastembed.py
spikes/kestra/: .env.example  README.md  alias_swap.py  docker-compose.yml  docs_stats.py  drive_trash.py  emit_expected.py  poc_config.py  prod_alias_swap.py  report.py  verify_counts.py
spikes/kestra/flows/: docs_stats_sheet.yaml  drive_write_proof.yaml  platform_docs_poc.yaml  prod_refresh.yaml  sheet_rw_test.yaml  sheet_wud_test.yaml
spikes/kestra/sql/: 001_orchestration_schema.sql
spikes/kestra/tests/: test_alias_swap.py  test_docs_stats.py  test_emit_expected.py  test_failure_gate.md  test_happy_path.md  test_poc_config.py  test_prod_alias_swap.py  test_report.py  test_schema_sql.py  test_verify_counts.py
spikes/prefect/: README.md  flow.py
src/platform_docs/: __init__.py  server.py
src/platform_docs_free/: __init__.py  server.py
tests/: __init__.py  test_mcp_server.py  test_split_grok.py
