[project]
name = "platform-docs"
version = "0.1.0"
description = "Semantic documentation search via Qdrant vector store and FastMCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.0,<3",
    "langchain-qdrant>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-community>=0.4.1",
    "qdrant-client>=1.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "tqdm>=4.67.0",
    "fastembed>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
prefect-spike = [
    "asyncpg>=0.31.0",
    "prefect>=3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
